# auto-eda-tool

./: 8799.ipynb  9300.ipynb  9330.ipynb  9342.ipynb  9498.ipynb  README.md  eda_tool.ipynb  eda_tool.py  main.py  pyproject.toml  requirements.txt  גרסה_עם_הערות_מעודכנות_8799.ipynb  ושאריות_חישוב_עם_אינפלציה.ipynb  ושאריות_חישוב_עם_אינפלציה_עונתיות_2_מודלים_של_רגרסיה_9096.ipynb  סופי_8799.ipynb  שאריות_חישוב_עם_אינפלציה_עונתיות_2_מודלים_של_רגרסיה_מדינה_מודל_לומד_טעויות_9019.ipynb
